<resources>
    <string name="app_name">Gyg</string>
    <string name="payment_options">Payment Options</string>
    <string name="pay_with_venmo">Pay Here!</string>
    <string name="payment_screen">Payment Screen</string>
    <string name="view_gygs">View Gygs</string>
    <string name="list_gygs">List Gygs</string>
    <string name="gyg_title">Gyg Title</string>
    <string name="gyg_category">Gyg Category</string>
    <string name="work_location">Work Location</string>
    <string name="pay">Pay</string>
    <string name="usd">USD</string>
    <string name="please_enter_a_detailed_work_description_here">Please enter a detailed work description here</string>
    <string name="post_gygs">Post Gygs</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_out">Signed out successfully</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="submit">Submit</string>
    <string name="my_skills">My Skills</string>
    <string name="profile">Profile</string>
    <string name="title">Title:</string>
    <string name="category">Category:</string>
    <string name="location">Location:</string>
    <string name="offered_by">Poster:</string>
    <string name="pay2">Pay:</string>
    <string name="description">Description</string>
    <string name="gyg">Gyg</string>
    <string name="gyg_name">Gyg Name</string>
    <string name="volunteer_no_pay">Volunteer (No Pay)</string>
    <string name="set_deadline">Set Deadline</string>
    <string name="test">Test</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="name">Name</string>
    <string name="display_name">Displayed Name :</string>
    <string name="displayed_skills">Displayed Skills :</string>
    <string name="skill_1">Skill 1</string>
    <string name="skill_2">Skill 2</string>
    <string name="skill_3">Skill 3</string>
    <string name="update_payment_info">Update Payment Info</string>
    <string name="upload_new_display_picture">Upload New Display Picture</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="set_a_deadline">SET a deadline</string>
    <string name="deadline_not_set">DEADLINE NOT SET</string>
    <string name="change_deadline">CHANGE DEADLINE</string>
    <string name="background_colors">background_colors</string>
    <string name="get_location">GET LOCATION</string>
    <string name="change_password">Change Password :</string>
    <string name="old_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="update_pw">Update Password</string>
    <string name="cancel">Cancel</string>
    <string name="profile_header">Your Public Profile</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="my_gygs">My Gygs</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="skills">Displayed Skills</string>
    <string name="displayed_name">Display Name</string>
    <string name="email_address">email@address</string>
    <string name="share_email_address">Share email address?</string>
    <string name="email_address_paren">(email@address)</string>
    <string name="share">Share</string>
    <string name="name_of_location">Name of Location</string>
    <string name="gyg_poster_name">Gyg Poster Name</string>
    <string name="fee">$$$ FEE</string>
    <string name="exit">Emergency Sign Out Button</string>
    <string name="report_user">Report User</string>
    <string name="user_profile">User Profile</string>
    <string name="general_profile">General Profile</string>
    <string name="see_profile">See Profile</string>
    <string name="accept">Accept</string>
    <string name="hits">Hits</string>
    <string name="accept_worker">Accept</string>
    <string name="decline">Decline</string>
    <string name="Accept">accept</string>
    <string name="gyg_worker_name">gyg_worker_name</string>
    <string name="worker_skills_label"><u>Top 3 Skills</u></string>
</resources>
