<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.capstonegyg.gyg.StartScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gyg"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_margin="90dp"
            android:layout_marginBottom="180dp"
          />

        <Button
            android:id="@+id/view_gyg_button"
            style="@style/GeneralButtons"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/view_gygs"
           />


        <Button
            android:id="@+id/post_gyg_button"
            style="@style/GeneralButtons"
            android:text="@string/post_gygs"
           />

        <Button
            android:id="@+id/profile_button"
            style="@style/GeneralButtons"
            android:text="@string/profile"
         />

        <Button
            android:id="@+id/mygygs_button"
            style="@style/GeneralButtons"
            android:layout_height="match_parent"
            android:text="@string/my_gygs"
            />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
