<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/detail_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/title"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/detail_category"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/category"
            android:textSize="18sp" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:hapticFeedbackEnabled="false"
            android:visibility="visible"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/detail_location"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/location"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/detail_jobposter"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/offered_by"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/detail_fee"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:text="@string/pay2"
                android:textSize="18sp" />

        </RelativeLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:visibility="visible"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/description"
            android:textSize="18sp" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>