<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp">

    <android.support.v7.widget.CardView
        android:layout_margin="20dp"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="horizontal"
                    android:background="@color/accent">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/gyg_name"
                            style="@style/TextViewWeight"
                            android:text="@string/gyg_name"/>

                        <TextView
                            android:id="@+id/gyg_location"
                            style="@style/TextViewWeight"
                            android:layout_marginTop="8dp"
                            android:text="@string/name_of_location"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/gyg_worker_name"
                            style="@style/TextViewWeight"
                            android:gravity="end"
                            android:text="@string/gyg_poster_name"/>

                        <TextView
                            android:id="@+id/gyg_fee"
                            style="@style/TextViewWeight"
                            android:gravity="end"
                            android:layout_marginTop="8dp"
                            android:text="@string/fee"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bt_very_light_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/primary_text"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/delete"
                        android:textSize="18sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textColor="@color/bt_error_red"
                        android:gravity="start"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/hits"
                        android:textSize="18sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/hits"
                        android:textAllCaps="true"
                        android:textColor="@color/primary"
                        android:gravity="center"
                        android:layout_weight="1"
                        />

                    <TextView
                        android:id="@+id/edit"
                        android:textSize="18sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:gravity="end"
                        android:textColor="@color/bt_blue_pressed"
                        android:layout_weight="1"
                        />

                </LinearLayout>

            </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>